k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitro-utils
  namespace: nitro
  labels:
    app: nitro-utils
spec:
  type: NodePort
  selector:
    app: nitro-utils
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30086
      protocol: TCP
      name: http
